# mirror-dash

./: .gitignore  CMakeLists.txt  Makefile  MyExecutable  README.md  build.sh  main.c  map.level
assets/maps/first/: map.level
assets/maps/second/: map.level
assets/maps/third/: map.level
assets/maps/tuto-first/: data.txt  map.level
interfaces/: gameLoop.c  gameLoop.h  mainMenu.c  mainMenu.h  mouvement.c  mouvement.h
primitives/: LinkedList.c  LinkedList.h  _structs.h  core.c  core.h  fileCreator.c  fileCreator.h  linkedList.c  linkedList.h  particles.c  particles.h  playerMovements.c  playerMovements.h
tests/: testBaseSDL.c  tests.c  tests.h
